--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
             </div>
 
             <div class="list-group">
-              <a href="https://github.com/cedx/akismet.js/releases/download/v0.3.0/akismet.js-0.3.0.zip" class="list-group-item">
-                <span class="label label-info pull-right">0.3.0</span>
+              <a href="https://github.com/cedx/akismet.js/releases/download/v0.3.1/akismet.js-0.3.1.zip" class="list-group-item">
+                <span class="label label-info pull-right">0.3.1</span>
                 Pub package
               </a>
               <a href="https://github.com/cedx/akismet.js/archive/master.zip" class="list-group-item">
@@ -242,7 +242,7 @@
 
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="./js/mocha.min.js"></script>
+    <script src="./js/mocha.js"></script>
     <script src="./js/tests.min.js"></script>
   </body>
 </html>
