--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
             </div>
 
             <div class="list-group">
-              <a href="https://github.com/cedx/akismet.js/releases/download/v0.3.1/akismet.js-0.3.1.zip" class="list-group-item">
-                <span class="label label-info pull-right">0.3.1</span>
-                Pub package
+              <a href="https://github.com/cedx/akismet.js/releases/download/v0.3.2/akismet.js-0.3.2.zip" class="list-group-item">
+                <span class="label label-info pull-right">0.3.2</span>
+                NPM package
               </a>
               <a href="https://github.com/cedx/akismet.js/archive/master.zip" class="list-group-item">
                 <span class="label label-default pull-right">ZIP</span>
